# myatlas

./: .gitignore  AWS_Restore_Project.md  DataGov-Dashboard.html  DataGov-WithAtlan.html  DataGov.md  MYATLAS.md  PULSE.md  Yemi_Career_Development_Plan_2026.docx  eslint.config.js  helm-architecture.html  index.html  package-lock.json  package.json  pulse-preview-mar17.html  vite.config.ts
MyAtlas-Mobile/: App.tsx  SETUP.md  SplashScreen.tsx  app.json  package-lock.json  package.json
MyAtlas-Mobile-2/: app.json  package-lock.json  package.json
MyAtlas-Mobile/app/(tabs)/: _layout.tsx  index.tsx
MyAtlas-Mobile/utils/: parser.ts  storage.ts
Project_Atlas/: .gitignore  CHANGELOG.md  HELM.md
Project_Atlas/life/: FRAMEWORK.md
Project_Atlas/life/mock/: .gitkeep
Project_Atlas/pulse/: PULSE.md  pulse_builder.py
mobile-vision/: INTEGRATE.md  config.ts
mobile-vision/components/: ImageInput.tsx  SignalConfirm.tsx
mobile-vision/utils/: vision.ts
public/: landing.html  manifest.json  sw.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  gen_icons.py  setup_tauri.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
