[package]
name = "myatlas"
version = "1.0.0"
description = "MyAtlas — Personal Intelligence Dashboard"
authors = ["Yemi Akembi"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[lib]
name = "myatlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
